@@ -1,12 +1,12 @@
-/* GSCharUtilities.h
-   
+/* GSCharacter.h
+
    Copyright (C) 2014 Free Software Foundation, Inc.
-   
+
    Written by: Stefan Bidigaray
    Date: November, 2014
-   
+
    This file is part of the GNUstep CoreBase Library.
-   
+
    This library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Lesser General Public
    License as published by the Free Software Foundation; either
@@ -24,18 +24,27 @@
    Boston, MA 02110-1301, USA.
 */
 
-#ifndef __GSCHAR_H__
-#define __GSCHAR_H__ 1
+#ifndef __GSCHARACTER_H__
+#define __GSCHARACTER_H__ 1
 
-#include "CoreFoundation/CFBase.h"
+#include <CoreFoundation/CFBase.h>
 
 /** \defgroup CharUtils Character Utilities
     \{
  */
-
 /** \name Unicode Code Point Functions
     \{
  */
+
+/** \brief Determine if a character is an ASCII character (less than 128).
+    \param[in] c Character to test.
+    \return Return true if character is an ASCII character.
+ */
+CF_INLINE Boolean
+GSCharacterIsASCII (const UTF32Char c)
+{
+  return c < 128;
+}
 
 /** \brief Determine if character is in one of the supplementary planes.
     \param[in] c Character to test.
@@ -43,7 +52,7 @@
 	    and false if in the Basic Multilingual plane.
  */
 CF_INLINE Boolean
-GSCharIsInSupplementaryPlane (UTF32Char c)
+GSCharacterIsInSupplementaryPlane (const UTF32Char c)
 {
   return c > 0xFFFF;
 }
@@ -53,7 +62,7 @@ GSCharIsInSupplementaryPlane (UTF32Char c)
     \return Returns true if character is a surrogate and false, otherwise.
  */
 CF_INLINE Boolean
-GSCharIsSurrogate (UTF32Char c)
+GSCharacterIsSurrogate (const UTF32Char c)
 {
   return (c & 0xFFFFF800) == 0xD800;
 }
@@ -63,7 +72,7 @@ GSCharIsSurrogate (UTF32Char c)
     \return Returns true if character is leading and false, otherwise.
  */
 CF_INLINE Boolean
-GSCharIsLeadSurrogate (UTF32Char c)
+GSCharacterIsLeadSurrogate (const UTF32Char c)
 {
   return (c & 0xFFFFFC00) == 0xD800;
 }
@@ -73,30 +82,28 @@ GSCharIsLeadSurrogate (UTF32Char c)
     \return Returns true if character is trailing and false, otherwise.
  */
 CF_INLINE Boolean
-GSCharIsTrailSurrogate (UTF32Char c)
+GSCharacterIsTrailSurrogate (const UTF32Char c)
 {
   return (c & 0xFFFFFC00) == 0xDC00;
 }
-
-/** \}
- */
+/** \} */
 
 /** \name UTF-8 Utilities
     \{
  */
 
 /** \brief The maximum number of UTF-8 code units required to represent
-	   the highest Unicode code point.
+      the highest Unicode code point.
  */
-#define kGSUTF8CharMaximumLength 4
+#define kGSUTF8CharacterMaximumLength 4
 
 /** \brief Determine the number of code units for a UTF-8 character based on
-	   the leading code unit.
+      the leading code unit.
     \param[in] c Leading code unit to test.
     \return The number of UTF-8 code units in this character.
  */
 CF_INLINE CFIndex
-GSUTF8CharCodeUnitCount (UTF8Char c)
+GSUTF8CharacterCodeUnitCount (const UTF8Char c)
 {
   return (c < 0xF8) ? (c < 128 || c >= 0xC0) + (c >= 0xC0) + (c >= 0xE0)
     + (c >= 0xF0) : 0;
@@ -107,32 +114,32 @@ GSUTF8CharCodeUnitCount (UTF8Char c)
     \return Returns true if this UTF-8 code unit is a trailing code unit.
  */
 CF_INLINE Boolean
-GSUTF8CharIsTrailing (UTF8Char c)
+GSUTF8CharacterIsTrailing (const UTF8Char c)
 {
   return (c & 0xC0) == 0x80;
 }
 
 /** \brief Determine the number of UTF-8 code units required to represent
-	   the specified Unicode code point.
+      the specified Unicode code point.
     \param[in] c The Unicode code point to test.
     \return The number of UTF-8 code units required.
  */
 CF_INLINE CFIndex
-GSUTF8CharLength (UTF32Char c)
+GSUTF8CharacterLength (const UTF32Char c)
 {
   return (c <= 0x10FFFF) ? 1 + (c >= 0x80) + (c >= 0x800) + (c >= 0x10000) : 0;
 }
 
 /** \brief Append the UTF-8 Byte Order Mark to the string buffer.
     \param[in,out] d A pointer to the current position of the string buffer.
-		     This value is updated after a call to the function.
+      This value is updated after a call to the function.
     \param[in] end The position just after the end of the buffer.  The caller
-		   must ensure this parameter is beyond the string buffer
-		   pointed to by \b d.
+      must ensure this parameter is beyond the string buffer
+      pointed to by \b d.
     \return True if the function was successful and false, otherwise.
  */
 CF_INLINE Boolean
-GSUTF8CharAppendByteOrderMark (UTF8Char ** d, UTF8Char *end)
+GSUTF8CharacterAppendByteOrderMark (UTF8Char ** d, UTF8Char * end)
 {
   UTF8Char *p;
 
@@ -152,25 +159,25 @@ GSUTF8CharAppendByteOrderMark (UTF8Char ** d, UTF8Char *end)
 
 /** \brief Determine if a UTF-8 string buffer has a Byte Order Mark.
     \param[in,out] s A pointer to the current position of the string buffer.
-		     This value is updated after a call to the function.
+      This value is updated after a call to the function.
     \param[in] end The position just after the end of the buffer.  The caller
-		   must ensure this parameter is beyond the string buffer
-		   pointed to by \b d.
+      must ensure this parameter is beyond the string buffer
+      pointed to by \b d.
     \return True if a Byte Order Mark is found and false, otherwise.
  */
 CF_INLINE Boolean
-GSUTF8CharSkipByteOrderMark (UTF8Char ** s, UTF8Char *end)
+GSUTF8CharacterSkipByteOrderMark (const UTF8Char ** s, const UTF8Char * end)
 {
-  UTF8Char *p;
+  const UTF8Char *p;
 
   p = *s;
   if ((end - p) > 3)
     {
       if (*p++ == 0xEF && *p++ == 0xBB && *p++ == 0xBF)
-	{
-	  *s = p;
-	  return true;
-	}
+        {
+          *s = p;
+          return true;
+        }
     }
 
   return false;
@@ -178,17 +185,17 @@ GSUTF8CharSkipByteOrderMark (UTF8Char ** s, UTF8Char *end)
 
 /** \brief Append a character to a UTF-8 string buffer.
     \param[in,out] d A pointer to the current position of the string buffer.
-		     This value is updated after a call to the function.
+      This value is updated after a call to the function.
     \param[in] end The position just after the end of the buffer.  The caller
-		   must ensure this parameter is beyond the string buffer
-		   pointed to by \b d.
+      must ensure this parameter is beyond the string buffer
+      pointed to by \b d.
     \param[in] c The Unicode code point to write.
     \return True if the functions was successful, and false if there is not
-	    enough space left in the string buffer or the code point is
-	    invalid.
+      enough space left in the string buffer or the code point is
+      invalid.
  */
 CF_INLINE Boolean
-GSUTF8CharAppend (UTF8Char ** d, UTF8Char * end, UTF32Char c)
+GSUTF8CharacterAppend (UTF8Char ** d, UTF8Char * end, UTF32Char c)
 {
   UTF8Char *p;
 
@@ -202,7 +209,7 @@ GSUTF8CharAppend (UTF8Char ** d, UTF8Char * end, UTF32Char c)
       *p++ = (c >> 6) | 0xC0;
       *p++ = (c & 0x3F) | 0x80;
     }
-  else if (GSUCharIsSurrogate (c) || c > 0x10FFFF)
+  else if (GSCharacterIsSurrogate (c) || c > 0x10FFFF)
     {
       return false;
     }
@@ -225,61 +232,57 @@ GSUTF8CharAppend (UTF8Char ** d, UTF8Char * end, UTF32Char c)
 
 /** \brief Get a Unicode code point from a UTF-8 string buffer.
     \param[in,out] s A pointer to the current position of the buffer.
-		     This value is updated after a call to the function.
+      This value is updated after a call to the function.
     \param[in] end The position just after the end of the buffer.
     \return A valid Unicode code point or a UTF-16 surrogate.
-	    Will return 0 in a few cases:
-	    1. The UTF-8 code unit is also a 0.
-	    2. The UTF-8 code unit pointed to by \b s is not a leading code
-	    unit.
-	    3. The leading UTF-8 code unit does not have the correct number
-	    of trailing code units.
-	    4. The resulting code point is a above 0x10FFFF.
+      Will return 0 in a few cases:
+      1. The UTF-8 code unit is also a 0.
+      2. The UTF-8 code unit pointed to by \b s is not a leading code
+      unit.
+      3. The leading UTF-8 code unit does not have the correct number
+      of trailing code units.
+      4. The resulting code point is a above 0x10FFFF.
  */
 CF_INLINE UTF32Char
-GSUTF8CharGet (UTF8Char ** s, UTF8Char * end)
+GSUTF8CharacterGet (const UTF8Char ** s, const UTF8Char * end)
 {
   return 0;
 }
-
-/** \}
- */
+/** \} */
 
 /** \name UTF-16 Utilities
     \{
  */
 
 /** \brief The maximum number of UTF-16 code units required to represent the
-	   highest Unicode code point.
+      highest Unicode code point.
  */
-#define kGSUTF16CharMaximumLength 2
+#define kGSUTF16CharacterMaximumLength 2
 
-/** \brief The Byte Order Mark for UTF-16 strings.
- */
-#define kGSUTF16CharByteOrderMark 0xFEFF
+/** \brief The Byte Order Mark for UTF-16 strings. */
+#define kGSUTF16CharacterByteOrderMark 0xFEFF
 
-/** \brief The swapped Byte Order Mark for UTF-16 strings.
- */
-#define kGSUTF16CharSwappedByteOrderMark 0xFFFE
+/** \brief The swapped Byte Order Mark for UTF-16 strings. */
+#define kGSUTF16CharacterSwappedByteOrderMark 0xFFFE
 
 /** \brief Append a character to a UTF-16 string buffer.
     \param[in,out] d A pointer to the current position of the buffer.
-		     This value is updated after a call to the function.
+      This value is updated after a call to the function.
     \param[in] end The position just after the end of the buffer.
     \param[in] c The Unicode code point to write.
     \return True if the functions was successful, and false if there is not
-	    enough space left in the string buffer or the code point is
-	    invalid.
+      enough space left in the string buffer or the code point is
+      invalid.
  */
 CF_INLINE Boolean
-GSUTF16CharAppend (UTF16Char ** d, UTF16Char * end, UTF32Char c)
+GSUTF16CharacterAppend (UTF16Char ** d, UTF16Char * end, UTF32Char c)
 {
   UTF16Char *p;
 
   p = *d;
   if (c <= 0xFFFF && (end - p) > 1)
     {
-      if (GSUCharIsSurrogate (c))
+      if (GSCharacterIsSurrogate (c))
         return false;
       *p++ = c;
     }
@@ -300,25 +303,26 @@ GSUTF16CharAppend (UTF16Char ** d, UTF16Char * end, UTF32Char c)
 
 /** \brief Get a Unicode code point from a UTF-16 string buffer.
     \param[in,out] s A pointer to the current position of the buffer.
-		     This value is updated after a call to the function.
+      This value is updated after a call to the function.
     \param[in] end The position just after the end of the buffer.
     \return A valid Unicode code point.  Will return 0 in a few cases:
-	    1. The UTF-16 code unit is also a 0.
-	    2. The UTF-16 code unit pointed to by \b s is not a leading code
-	    unit.
-	    3. The leading UTF-16 code unit does not have a trailing pair.
+      1. The UTF-16 code unit is also a 0.
+      2. The UTF-16 code unit pointed to by \b s is not a leading code
+      unit.
+      3. The leading UTF-16 code unit does not have a trailing pair.
  */
 CF_INLINE UTF32Char
-GSUTF16CharGet (UTF16Char ** s, UTF16Char * end)
+GSUTF16CharacterGet (const UTF16Char ** s, const UTF16Char * end)
 {
   UTF32Char c;
-  UTF16Char *p;
+  const UTF16Char *p;
 
   p = *s;
   c = *p++;
-  if (GSUCharIsSurrogate (c))
+  if (GSCharacterIsSurrogate (c))
     {
-      if (GSUCharIsLeadSurrogate (c) && p < end && GSUCharIsTrailSurrogate (*p))
+      if (GSCharacterIsLeadSurrogate (c) && p < end
+          && GSCharacterIsTrailSurrogate (*p))
         c = (c << 10) + (*p++) - ((0xD7C0 << 10) + 0xDC00);
       else
         return 0;
@@ -327,26 +331,20 @@ GSUTF16CharGet (UTF16Char ** s, UTF16Char * end)
   *s = p;
   return c;
 }
-
-/** \}
- */
+/** \} */
 
 /** \name UTF-32 Utilities
     \{
  */
 
-/** \brief The Byte Order Mark for UTF-32 strings.
- */
-#define kGSUTF32CharByteOrderMark 0x0000FEFF
+/** \brief The Byte Order Mark for UTF-32 strings. */
+#define kGSUTF32CharacterByteOrderMark 0x0000FEFF
 
-/** \brief The swapped Byte Order Mark for UTF-32 strings.
- */
-#define kGSUTF32CharSwappedByteOrderMark 0xFFFE0000
+/** \brief The swapped Byte Order Mark for UTF-32 strings. */
+#define kGSUTF32CharacterSwappedByteOrderMark 0xFFFE0000
 
-/** \}
- */
+/** \} */
 
-/** \}
- */
+/** \} */
 
-#endif /* __GSCHAR_H__ */
+#endif /* __GSCHARACTER_H__ */
